# asyncdwmblocks

./: Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml  build_and_test.yml  clippy.yml  test.yml
src/: block.rs  blocks.rs  config.rs  lib.rs  main.rs  pipe.rs  statusbar.rs  x11.rs
src/config/: config_file.rs  defaults.rs  mod.rs
src/ipc/: frame.rs  mod.rs  opaque.rs
src/ipc/tcp/: mod.rs  notifier.rs  server.rs
src/ipc/uds/: mod.rs  notifier.rs  server.rs
src/server/: frame.rs  mod.rs  tcp.rs
src/server/tcp/: listener.rs  mod.rs  notifier.rs  server.rs
src/utils/: mod.rs  pipe.rs  split.rs
tests/: block.rs  config_file.rs  config_file_disabled.rs  config_file_enabled.rs
tests/assets/: button.sh  button_btn.sh  config_no_ipc.yaml  config_tcp.yaml  config_uds.yaml  config_uds_abstract_namespace.yaml  echo_null_char.sh  full_config.yaml
tests/assets/config_autoload/1/asyncdwmblocks/: config.yaml
tests/assets/config_autoload/2/.config/asyncdwmblocks/: config.yaml
tests/assets/config_autoload/home/.config/asyncdwmblocks/: config.yaml
tests/assets/config_autoload/home_yml/.config/asyncdwmblocks/: config.yml
tests/assets/config_autoload/xdg/asyncdwmblocks/: config.yaml
tests/assets/config_autoload/xdg_yaml_yml/asyncdwmblocks/: config.yaml  config.yml
tests/assets/config_autoload/xdg_yml/asyncdwmblocks/: config.yml
