[package]
name = "asyncdwmblocks"
version = "0.1.0"
edition = "2021"

[features]
tcp = ["tokio/net", "tokio/io-util"]
default = ["tcp"]

[dependencies]
x11-dl = "2.19"
futures = "0.3"
async-trait = "0.1"

[dependencies.tokio]
version = "1.15"
features = ["time", "sync", "process", "macros", "rt-multi-thread"]

[dev-dependencies]
chrono = "0.4"
