[package]
name = "asyncdwmblocks"
version = "0.1.0"
edition = "2021"

[features]
ipc = ["async-trait"]
tcp = ["ipc", "tokio/net", "tokio/io-util"]
config-file = ["tokio/fs", "yaml-rust"]
default = ["tcp", "config-file"]

[dependencies]
x11-dl = "2.19"
futures = "0.3"

[dependencies.tokio]
version = "1.15"
features = ["time", "sync", "process", "macros", "rt-multi-thread", "parking_lot"]

[dependencies.yaml-rust]
version = "0.4"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dev-dependencies]
chrono = "0.4"
rusty-fork = "0.3"
