[package]
name = "asyncdwmblocks"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "asyncdwmblocks"
path = "src/bin/asyncdwmblocks.rs"

[[bin]]
name = "asyncdwmblocks-notify"
path = "src/bin/asyncdwmblocks_notify.rs"
required-features = ["ipc"]

[features]
ipc = ["async-trait", "clap"]
tcp = ["ipc", "tokio/net", "tokio/io-util"]
config-file = ["tokio/fs", "serde", "serde_yaml"]
default = ["tcp", "config-file"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.15", features = ["time", "sync", "process", "macros", "rt-multi-thread", "parking_lot"]}
x11-dl = "2.19"

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.clap]
version = "3.0"
optional = true
default-features = false
features = ["std", "unicode"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_yaml]
version = "0.8"
optional = true

[dev-dependencies]
chrono = "0.4"
pretty_assertions = "1.0"
rusty-fork = "0.3"
